--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,11 @@
+#server:
+#  port: 8080
+#  ssl:
+#    enabled: true
+#    key-store-password: web123456
+#    key-store: classpath:keystore.p12
+#    key-store-type: PKCS12
+
 spring:
   r2dbc:
     url: r2dbc:pool:mysql://localhost:3306/testmysql
