--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,15 @@ services:
     command:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
+
+#  webflux-102:
+#    image: jwoo5264/webflux-102:latest
+#    container_name: webflux-102
+#    environment:
+#      TZ: Asia/Seoul
+#      SPRING_DATASOURCE_URL: r2dbc:pool:mysql://localhost:3306/testmysql
+#      SPRING_DATASOURCE_USERNAME: root
+#      SPRING_DATASOURCE_PASSWORD: 1234
+#    restart: always
+#    ports:
+#      - "8080:8080"
